• Fixed ParticipateEvent
• Updated ChatTab Sent icon & stats
• Fixed incorrect path for Lunar Client