@@ -80,7 +80,7 @@ public class Settings {
 			}
 		}
 
-		changeClient(Client.values()[lastIndex]);
+		changeClient(Client.values()[lastIndex == -1 ? 0 : lastIndex]);
 	}
 
 	public void detectOS() {
@@ -190,7 +190,7 @@ public class Settings {
 			for (String pathPart : c.getPath()) {
 				path += pathPart.equals("&home&") ? System.getProperty("user.home") : "";
 				if (!pathPart.equals("&home&"))
-					path += pathPart.equals("&home&") && pathPart.equals("&mcdir&") ? mcdir : pathPart;
+					path += pathPart.equals("&mcdir&") ? mcdir : pathPart;
 				path += pathPart.endsWith(".log") ? "" : File.separator;
 			}
 			result[i] = path;
