@@ -28,7 +28,7 @@ public class DeathEvent extends ChatEvent {
 	@Override
 	public String analyze(Matcher match, int key) {
 		self = key == 1;
-		opponent = self ? "" : match.group(0);
+		opponent = self ? "" : match.group(1);
 
 		new DeathPacket(opponent, self);
 
